Complete the first prototype of the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">OPC UA Client</string>
-    <string name="connect_and_read">Connect and read server time</string>
-    <string name="time_on_server">Time on server</string>
-    <string name="init_time_string">No time to display, do a read first!</string>
+    <string name="button_read">READ AND SET TO 0</string>
 </resources>
